<resources>
    <string name="app_name">DemoWeek11</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="current_weather">Current Weather</string>
    <string name="city">City</string>
    <string name="date">Date</string>
    <string name="_0">0°</string>
    <string name="desc">Desc</string>
    <string name="weather_icon">weather icon</string>
</resources>